--- a/Raw JS/demo/src/demo.html
+++ b/Raw JS/demo/src/demo.html
@@ -2,6 +2,7 @@
 <html>
     <script src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
     <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
+    <link rel="stylesheet" href="./style.css"/>
 <head>
     
 </head>
