Create and render a React component

--- a/Raw JS/demo/src/demo.html
+++ b/Raw JS/demo/src/demo.html
@@ -11,7 +11,32 @@
 
 <h1>React Demo</h1>
 
-<p>Only loading the React library</p>
+<p>Only loading the React  library</p>
+
+<div id="root"></div>
+
+<script>
+    // create a component called App
+    const App = () => {
+        return React.createElement( // create a div
+            "div",
+            {},
+            React.createElement( // create a h2 as a child to the div
+                "h2",
+                {},
+                "From React !!!"
+            )
+        )
+    }
+
+    // render this React component to this div
+    ReactDOM.render(
+        React.createElement(App), 
+        document.getElementById("root")
+    )
+
+
+</script>
 
 </body>
 </html>
