Move the React code to a seperate file and add a Car component

--- a/Raw JS/demo/src/demo.html
+++ b/Raw JS/demo/src/demo.html
@@ -15,28 +15,7 @@
 
 <div id="root"></div>
 
-<script>
-    // create a component called App
-    const App = () => {
-        return React.createElement( // create a div
-            "div",
-            {},
-            React.createElement( // create a h2 as a child to the div
-                "h2",
-                {},
-                "From React !!!"
-            )
-        )
-    }
-
-    // render this React component to this div
-    ReactDOM.render(
-        React.createElement(App), 
-        document.getElementById("root")
-    )
-
-
-</script>
+<script src="App.js"></script>
 
 </body>
 </html>
