add the eslint configs

--- a/Raw JS/demo/src/demo.html
+++ b/Raw JS/demo/src/demo.html
@@ -1,21 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <script src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
-    <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
-    <link rel="stylesheet" href="./style.css"/>
-<head>
-    
-</head>
+  <script src="https://unpkg.com/react@16.8.4/umd/react.development.js"></script>
+  <script src="https://unpkg.com/react-dom@16.8.4/umd/react-dom.development.js"></script>
+  <link rel="stylesheet" href="./style.css" />
+  <head> </head>
 
-<body>
+  <body>
+    <h1>React Demo</h1>
 
-<h1>React Demo</h1>
+    <p>Only loading the React library</p>
 
-<p>Only loading the React  library</p>
+    <div id="root"></div>
 
-<div id="root"></div>
-
-<script src="App.js"></script>
-
-</body>
+    <script src="App.js"></script>
+  </body>
 </html>
